--- a/bower.json
+++ b/bower.json
@@ -11,10 +11,11 @@
     "angular-mocks": "~1.5.0",
     "angular-resource": "~1.5.0",
     "angular-ui-router": "~0.2.18",
-    "bootstrap": "~3.3.6",
     "ng-file-upload": "^12.1.0",
     "ng-img-crop": "ngImgCrop#^0.3.2",
-    "owasp-password-strength-test": "~1.3.0"
+    "owasp-password-strength-test": "~1.3.0",
+    "bootstrap-sass": "bootstrap-sass-official#^3.3.7",
+    "font-awesome": "fontawesome#^4.6.3"
   },
   "overrides": {
     "bootstrap": {
